Update link text in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body style="text-align:center; font-family:Arial;">
     <h1>Welcome</h1>
     <p>.</p>
-    <a href="https://example.com">Enter Marketplace</a>
+    <a href="https://example.com">.</a>
 </body>
 </html>
