Change title and paragraph content in index.html
Updated the title and modified the paragraph text.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vape Marketplace</title>
+    <title>Test website</title>
 </head>
 <body style="text-align:center; font-family:Arial;">
     <h1>Welcome</h1>
-    <p>.</p>
+    <p>Vill du köpa nåt från ås? hitta punkten</p>
     <a href="https://example.com">.</a>
 </body>
 </html>
