Update link to shop index page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body style="text-align:center; font-family:Arial;">
     <h1>Welcome</h1>
     <p>Vill du köpa nåt från ås? hitta punkten</p>
-    <a href="https://example.com">.</a>
+    <a href="tokolisk.github.io/web/shopindex.html">.</a>
 </body>
 </html>
