Update shop title and back link in HTML

--- a/hampus-shop.html
+++ b/hampus-shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eddie Shop - Vapes for Sale</title>
+    <title>Hampus Shop - Vapes for Sale</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,6 +85,6 @@
         </div>
     </div>
 
-    <a href="index.html" class="back-btn">Back to Home</a>
+    <a href="shopindex.html" class="back-btn">Back to Home</a>
 </body>
 </html>
