Fix anchor tag for category navigation

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>Welcome</h1>
     <p>Vill du köpa nåt från ås? hitta punkten</p>
     <a href="shopindex.html">¨</a>
+<a <div class="category" onclick="window.location.href='hampus-shop.html'">¨</a>
 </body>
 </html>
