--- a/hampus-shop.html
+++ b/hampus-shop.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Eddie Shop - Vapes for Sale</h1>
+        <h1>Hampus Shop - Vapes for Sale</h1>
     </div>
 
     <div class="product-list">
