--- a/hampus-shop.html
+++ b/hampus-shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hampus Shop - Vapes for Sale</title>
+    <title>fun Shop - Vapes for Sale</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Hampus Shop - Vapes for Sale</h1>
+        <h1>fun Shop - Vapes for Sale</h1>
     </div>
 
     <div class="product-list">
