--- a/shopindex.html
+++ b/shopindex.html
@@ -42,8 +42,8 @@
     </div>
 
     <div class="category-list">
-        <div class="category" onclick="window.location.href='hampus-shop.html'">
-            <h2>Hampus Vape Salu</h2>
+        <div class="category" onclick="window.location.href='fun-shop.html'">
+            <h2>Fun Shop Vape Salu</h2>
         </div>
     </div>
 </body>
