Update product details in fun-shop.html

--- a/fun-shop.html
+++ b/fun-shop.html
@@ -63,25 +63,25 @@
     </div>
 
     <div class="product-list">
-        <!-- Example Product 1 -->
+        <!-- Pinne Vap -->
         <div class="product">
-            <img src="vape1.jpg" alt="Vape Product 1">
-            <h3>Vape Model 1</h3>
-            <p>300 Kr</p>
+            <img src="vape1.jpg" alt="Watermelon ice 14mg Vape Pinne">
+            <h3>Vape Pinne</h3>
+            <p>85 Kr</p>
         </div>
 
-        <!-- Example Product 2 -->
+        <!-- Vape Duo -->
         <div class="product">
             <img src="vape2.jpg" alt="Vape Product 2">
-            <h3>Vape Model 2</h3>
-            <p>300 Kr</p>
+            <h3>2 Smaker SNART</h3>
+            <p>Snart Kr</p>
         </div>
 
-        <!-- Example Product 3 -->
+        <!-- Snart -->
         <div class="product">
             <img src="vape3.jpg" alt="Vape Product 3">
-            <h3>Vape Model 3</h3>
-            <p>300 Kr</p>
+            <h3>Snart</h3>
+            <p>Snart</p>
         </div>
     </div>
 
