Update product details for Vape Pinne

--- a/fun-shop.html
+++ b/fun-shop.html
@@ -65,8 +65,8 @@
     <div class="product-list">
         <!-- Pinne Vap -->
         <div class="product">
-            <img src="vape1.jpg" alt="Watermelon ice 14mg Vape Pinne">
-            <h3>Vape Pinne</h3>
+            <img src="vape1.jpg" alt="Watermelon ice">
+            <h3>Vape Pinne 14mg</h3>
             <p>85 Kr</p>
         </div>
 
