Update product comment from 'Pinne Vap' to 'Vape'

--- a/fun-shop.html
+++ b/fun-shop.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="product-list">
-        <!-- Pinne Vap -->
+        <!-- Vape -->
         <div class="product">
             <img src="vape1.jpg" alt="Watermelon ice">
             <h3>Vape Pinne 14mg</h3>
