Add description and contact info for Vape Pinne

--- a/fun-shop.html
+++ b/fun-shop.html
@@ -67,7 +67,9 @@
         <div class="product">
             <img src="vape1.jpg" alt="Watermelon ice">
             <h3>Vape Pinne 14mg</h3>
+            <p>WaterMelon Ice</p>
             <p>85 Kr</p>
+            <p>SnapChat: maxthurin08</p>
         </div>
 
         <!-- Vape Duo -->
