--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test website</title>
+    <title>Köp</title>
 </head>
 <body style="text-align:center; font-family:Arial;">
     <h1>Welcome</h1>
-    <p>Vill du köpa nåt från ås? hitta punkten</p>
-    <a href="shopindex.html">¨</a>
+    <p>Vill du köpa nåt från ås? Tryck på money</p>
+    <a href="shopindex.html">💵</a>
 <a <div class="category" onclick="window.location.href='hampus-shop.html'">¨</a>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hej</title>
+</head>
+<body>
+
+  <h1>Welcome</h1>
+  <p>Visitors:</p>
+
+  <img
+    src="https://hitscounter.dev/badge?page=tokolisk.web&style=flat-square"
+    alt="Visitor Count"
+  />
+
 </body>
 </html>
