Update index.html to include visitor counter
Removed the previous HTML structure and added a visitor counter image.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,5 @@
 </body>
 </html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Hej</title>
-</head>
-<body>
+<img src="https://hitscounter.dev/api/hit?url=tokolisk.github.io%2Fweb%2F&label=Vistor&icon=heart-fill&color=%2300ff1e&message=&style=plastic&tz=Europe%2FStockholm">
 
-  <h1>Welcome</h1>
-  <p>Visitors:</p>
-
-  <img
-    src="https://hitscounter.dev/badge?page=tokolisk.web&style=flat-square"
-    alt="Visitor Count"
-  />
-
-</body>
-</html>
