--- a/fun-shop.html
+++ b/fun-shop.html
@@ -90,3 +90,45 @@
     <a href="shopindex.html" class="back-btn">Back to Home</a>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact</title>
+</head>
+<body>
+
+  <h2>Contact Information</h2>
+
+  <p>
+    📧 Email:
+    <a href="mailto:youremail@example.com">
+      SNART
+    </a>
+  </p>
+
+  <p>
+    👻 Snapchat:
+    <a href="https://www.snapchat.com/add/maxthurin08" target="_blank">
+      maxthurin08
+    </a>
+  </p>
+
+  <p>
+    📞 Phone:
+    <a href="tel: Snart">
+      +1 234 567 890
+    </a>
+  </p>
+
+</body>
+</html>
