--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test website</title>
+    <title>Hej</title>
     <title>Köp</title>
 </head>
 <body style="text-align:center; font-family:Arial;">
@@ -32,3 +32,4 @@
 
 </body>
 </html>
+
