--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
   <p>Visitors:</p>
 
   <img
-    src="https://hitscounter.dev/badge?page=tokolisk.web&style=flat-square"
+<img src="https://hitscounter.dev/api/hit?url=tokolisk.github.io%2Fweb&label=Counter&icon=heart-fill&color=%23052c65&message=&style=plastic&tz=UTC">
     alt="Visitor Count"
   />
 
 </body>
 </html>
+
 
