--- a/shopindex.html
+++ b/shopindex.html
@@ -44,6 +44,10 @@
     <div class="category-list">
         <div class="category" onclick="window.location.href='fun-shop.html'">
             <h2>Fun Shop Vape Salu</h2>
+
+        <div class="category-list">
+        <div class="category" onclick="window.location.href='kyrksalu.html'">
+            <h2>Kyrkskolan skåp lås salu</h2>        
         </div>
     </div>
 </body>
